syntax = "proto3";

option java_multiple_files = true; // Generate separate .java files for each message and service
option java_package = "io.quarkus.example"; // Java package for generated classes
option java_outer_classname = "CategoryProto"; // Outer class name for generated classes

package category.course;

service CategoryService {
  rpc CreateCategory(CreateCategoryRequest) returns (Category) {} // unary api
  rpc ListAllCategories(Empty) returns (ListCategoriesResponse) {}
  rpc CreateCategories(stream CreateCategoryRequest) returns (ListCategoriesResponse) {} // stream client-side
  rpc CreateCategoryBidirectional(stream CreateCategoryRequest) returns (stream Category) {} // stream bi-directional
}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
}

// Repeated Ã© uma palavra-chave que representa uma lista
message ListCategoriesResponse {
  repeated Category categories = 1;
}

// Metodos sem parametros precisa passar uma message vazia
message Empty {}
